<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="episodesDetailsViewModel"
            type="com.example.andreymerkurev.rickandmorty.feature.episodedetails.EpisodesDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/episodesDetailsContentStart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/episodesDetailsContentEnd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />


            <ProgressBar
                android:id="@+id/episodesDetailsProgress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/episodesDetailsErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_not_found"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsProgress" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/episodesDetailsBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="episodesDetailsProgress,episodesDetailsErrorText" />

            <TextView
                android:id="@+id/episodesDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{episodesDetailsViewModel.episode.name}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsBarrier"
                tools:text="Name" />

            <TextView
                android:id="@+id/episodesDetailsLabelAirDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/air_date"
                app:layout_constraintStart_toStartOf="@id/episodesDetailsContentStart"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsName" />

            <TextView
                android:id="@+id/episodesDetailsStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{episodesDetailsViewModel.episode.airDate}"
                app:layout_constraintStart_toEndOf="@id/episodesDetailsLabelAirDate"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsName"
                tools:text="01.01.2021" />

            <TextView
                android:id="@+id/episodesDetailsLabelNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/episode"
                app:layout_constraintStart_toStartOf="@id/episodesDetailsContentStart"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsLabelAirDate" />

            <TextView
                android:id="@+id/episodesDetailsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{episodesDetailsViewModel.episode.episode}"
                app:layout_constraintStart_toEndOf="@id/episodesDetailsLabelNumber"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsLabelAirDate"
                tools:text="S03E07" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/episodesDetailsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/episodesDetailsContentEnd"
                app:layout_constraintStart_toStartOf="@id/episodesDetailsContentStart"
                app:layout_constraintTop_toBottomOf="@id/episodesDetailsNumber"
                app:listCharacters="@{episodesDetailsViewModel.characters}"
                app:spanCount="2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>